# pyfaults-test

./: CITATION.cff  CONTRIBUTING.md  LICENSE.txt  README.md  pyproject.toml
pyfaults/: CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md
pyfaults/docs/: conf.py  index.md
pyfaults/src/pyfaults/: XRD_functions.py  __init__.py  analysis_functions.py  structure_classes.py  structure_functions.py
pyfaults/tests/unit/: test_example.py
